--- a/packages/docs/src/pages/tokens/font-family.stories.mdx
+++ b/packages/docs/src/pages/tokens/font-family.stories.mdx
@@ -1,7 +1,7 @@
 
 import { Meta } from '@storybook/addon-docs'
 import { TokensGrid } from '../../components/TokensGrid'
-import { fonts } from '@dsllt-ignite-ui/tokens'
+import { fonts } from '@ignite-ui/tokens'
 
 <Meta title="Tokens/Font Families" />
 
