--- a/packages/docs/src/pages/tokens/font-weights.stories.mdx
+++ b/packages/docs/src/pages/tokens/font-weights.stories.mdx
@@ -1,7 +1,7 @@
 
 import { Meta } from '@storybook/addon-docs'
 import { TokensGrid } from '../../components/TokensGrid'
-import { fontWeights } from '@dsllt-ignite-ui/tokens'
+import { fontWeights } from '@ignite-ui/tokens'
 
 <Meta title="Tokens/Font Weights" />
 
