--- a/packages/docs/src/pages/tokens/radii.stories.mdx
+++ b/packages/docs/src/pages/tokens/radii.stories.mdx
@@ -1,7 +1,7 @@
 
 import { Meta } from '@storybook/addon-docs'
 import { TokensGrid } from '../../components/TokensGrid'
-import { radii } from '@dsllt-ignite-ui/tokens'
+import { radii } from '@ignite-ui/tokens'
 
 <Meta title="Tokens/Radii" />
 
