--- a/packages/docs/src/pages/tokens/spaces.stories.mdx
+++ b/packages/docs/src/pages/tokens/spaces.stories.mdx
@@ -1,7 +1,7 @@
 
 import { Meta } from '@storybook/addon-docs'
 import { TokensGrid } from '../../components/TokensGrid'
-import { space } from '@dsllt-ignite-ui/tokens'
+import { space } from '@ignite-ui/tokens'
 
 <Meta title="Tokens/Space" />
 
